--- a/package.json
+++ b/package.json
@@ -1,32 +1,16 @@
 {
-  "name": "keystonejs-tests",
-  "description": "Keystone tests project",
-  "private": true,
+  "name": "keystone-tests",
   "version": "1.0.0",
-  "author": "MishaZamkevich",
+  "main": "index.js",
+  "author": "Misha Zamkevich",
   "license": "MIT",
-  "engines": {
-    "node": ">=10.0.0"
-  },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development DISABLE_LOGGING=true keystone dev",
-    "build": "cross-env NODE_ENV=production keystone build",
-    "start": "cross-env NODE_ENV=production keystone start"
+    "dev": "NODE_ENV=development DISABLE_LOGGING=true keystone dev"
   },
   "dependencies": {
-    "@arch-ui/controls": "^0.1.8",
-    "@arch-ui/fields": "^3.0.1",
-    "@arch-ui/icons": "^0.1.1",
-    "@arch-ui/lozenge": "^0.0.16",
-    "@arch-ui/theme": "^0.0.10",
-    "@emotion/core": "^10.0.28",
-    "@keystonejs/adapter-mongoose": "^8.0.0",
-    "@keystonejs/app-admin-ui": "^5.11.1",
-    "@keystonejs/app-graphql": "^5.1.5",
-    "@keystonejs/app-static": "^5.1.2",
-    "@keystonejs/fields": "^9.0.4",
-    "@keystonejs/keystone": "^8.0.0",
-    "cross-env": "^7.0.0",
-    "react": "^16.13.1"
+    "@keystonejs/adapter-mongoose": "^8.1.2",
+    "@keystonejs/app-graphql": "^5.1.8",
+    "@keystonejs/fields": "^12.0.1",
+    "@keystonejs/keystone": "^10.1.0"
   }
 }
