--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "dev": "NODE_ENV=development DISABLE_LOGGING=true keystone dev"
   },
   "dependencies": {
-    "@keystonejs/adapter-mongoose": "^8.1.2",
-    "@keystonejs/app-graphql": "^5.1.8",
-    "@keystonejs/fields": "^12.0.1",
-    "@keystonejs/keystone": "^10.1.0"
+    "@keystonejs/adapter-mongoose": "^8.1.0",
+    "@keystonejs/app-admin-ui": "^6.0.0",
+    "@keystonejs/app-graphql": "^5.1.7",
+    "@keystonejs/fields": "^10.0.0",
+    "@keystonejs/keystone": "^9.0.0"
   }
 }
